Final Proj Changes

--- a/FinalProject_YourGroupNameHere.ipynb
+++ b/FinalProject_YourGroupNameHere.ipynb
@@ -35,7 +35,7 @@
     "__NB:__ this final project form is much more report-like than the proposal and the checkpoint. Think in terms of writing a paper with bits of code in the middle to make the plots/tables\n",
     "\n",
     "-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-    "In our project, we investigated various backtracking methods and heuristics to optimize piece placement in a simplified Tetris environment. The data for this project are dynamically generated game states that include the current board configuration along with the falling piece. We use several backtracking approaches using different heuristics such as score, score+height, full heuristics, full heuristics + alpha‐beta pruning and compare their performance to a Deep Q‐Network (DQN) model. We find that backtracking methods with domain‐specific heuristics often outperform the DQN, indicating that forward‐search and tailored board‐evaluation metrics can lead to more effective strategies. These findings are measured primarily through the Tetris score, which reflects the number of cleared lines."
+    "In our project, we investigated various backtracking methods and heuristics to optimize piece placement to maximize score in a simplified Tetris environment. The data for this project is dynamically generated game states that include the current board configuration along with the falling piece. We use several backtracking approaches using different heuristics such as score, score+height, full heuristics, full heuristics + alpha‐beta pruning and compare their performance to a Deep Q‐Network (DQN) model. We find that backtracking methods with domain‐specific heuristics often outperform the DQN, indicating that forward‐search and tailored board‐evaluation metrics can lead to more effective strategies. These findings are measured primarily through the Tetris score, which reflects the number of cleared lines."
    ]
   },
   {
@@ -112,8 +112,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Results\n",
-    "`TODO`\n",
+    "# Results `TODO`: Regenerate box_plot.png, compare DQN and AB, table comparing all 4 backtracking algos (mean, median, std), table comparing dqn and ab (mean, median, std)\n",
+    "`TODO` Overall results are DQN wins by about 25%. Likely due to limited depth search (see Discussion for explanation). Then for backtracking obv full heuristics wins.\n",
     "\n",
     "You may have done tons of work on this. Not all of it belongs here. \n",
     "\n",
@@ -159,21 +159,18 @@
     "\n",
     "Are there any problems with the work?  For instance would more data change the nature of the problem? Would it be good to explore more hyperparams than you had time for?   \n",
     "\n",
-    "One of our major limitations was computing power. Due to limited resources we could not explore a depth lower than 3 since it would take forever so we couldn't use alpha beta pruning to its full extent. Also obviously with an increased depth we likely would have had a higher average score for our backtracking section. Another major limitation would be that we used a simplified version of tetris that doesn't have time scaling, the full block set, or as advanced piece movement (sliding pieces under each other etc). We used this simplified version to make it easier to integrate our algorithms into the tetris game.\n",
+    "One of our major limitations was computing power. Due to limited resources we could not explore a depth lower than 3 since it would take an extremely long time so we couldn't use alpha beta pruning to its full extent. Also, with an increased depth we likely would have had a higher average score for our backtracking section. Another major limitation would be that we used a simplified version of tetris that doesn't have time scaling, the full block set, or as advanced piece movement (sliding pieces under each other etc). We used this simplified version to make it easier to integrate our algorithms into the tetris game.\n",
     "\n",
     "### Future work\n",
     "`TODO`\n",
     "\n",
     "Looking at the limitations and/or the toughest parts of the problem and/or the situations where the algorithm(s) did the worst... is there something you'd like to try to make these better.\n",
     "\n",
+    "Since the main limitation of our backtracking algorithm was a limited depth, in the future we could look into a beam search implementation. This could help us reduce the number of low reward branches to lighten the computational load. Additionally, with more time we could have run the algorithm with a much higher depth would in turn would have led to a higher average score. \n",
+    "\n",
     "### Ethics & Privacy\n",
-    "`TODO` prob can copy paste from proposal\n",
     "\n",
-    "If your project has obvious potential concerns with ethics or data privacy discuss that here.  Almost every ML project put into production can have ethical implications if you use your imagination. Use your imagination.\n",
-    "\n",
-    "Even if you can't come up with an obvious ethical concern that should be addressed, you should know that a large number of ML projects that go into producation have unintended consequences and ethical problems once in production. How will your team address these issues?\n",
-    "\n",
-    "Consider a tool to help you address the potential issues such as https://deon.drivendata.org\n",
+    "While a Tetris AI seems pretty simple and narrow in scope it can have some ethical implications. Tetris is mostly a singleplayer game but tournaments and leaderboards do exist so its possible for someone to cheat using this AI to gain an unfair advantage. Looking through Deon's ethical checklist, since we aren't utilizing any dataset we don't need to worry about any biases or gaps in our data. Our code is unlikely to be used for a different purpose than playing Tetris but even if it is it will only be able to be used to predict where the best place to place a block on a gameboard is so there is a low potential for misuse/harm.\n",
     "\n",
     "### Conclusion\n",
     "`TODO`\n",
