--- a/FinalProject_YourGroupNameHere.ipynb
+++ b/FinalProject_YourGroupNameHere.ipynb
@@ -124,9 +124,15 @@
     "If you went down any blind alleys that you later decided to not pursue, please don't abuse the TAs time by throwing in 81 lines of code and 4 plots related to something you actually abandoned.  Consider deleting things that are not important to your narrative.  If its slightly relevant to the narrative or you just want us to know you tried something, you could keep it in by summarizing the result in this report in a sentence or two, moving the actual analysis to another file in your repo, and providing us a link to that file.\n",
     "\n",
     "### Comparing Various Backtracking Algorithms and Heuristics\n",
-    "`TODO:` Fill this out\n",
+    "To analyze different heuristics for our backtracking model, we implemented and compared four different models. The Score model utilizes the game score as a heuristic; the Score+Height model utilizes both game score and height; the noAB model utilizes game score, height, bumpiness, and number of holes. The AB model utilizes the same heuristics as noAB with the additional use of Alpha Beta pruning. \n",
     "\n",
-    "You will likely have different subsections as you go through your report. For instance you might start with an analysis of the dataset/problem and from there you might be able to draw out the kinds of algorithms that are / aren't appropriate to tackle the solution.  Or something else completely if this isn't the way your project works.\n",
+    "Producing the worst results, to no surprise, is the Score model (median = `??`) since it uses the least heuristics compared to the other models. The next model with the lowest median (`???`) is the Score+Height model. Although this model has a difference of `???` in max score compared to the Score model, it is far outperformed by both AB and noAB. \n",
+    "\n",
+    "The results of AB and noAB both have similar means and medians (`???`), with the median for AB being slightly higher. However, in contrast to noAB, the AB model has a smaller standard deviation. \n",
+    "\n",
+    "In analyzing the ranges of scores for each, the Score model leads to the smallest range where few scores are far from zero. The Score+Height model had a wide range with scores varying from `???` to `???`, while AB and noAB consistently perform well with ranges around `???` apart.\n",
+    "\n",
+    "`TODO:` Fill in statistics numbers in this section (marked by `???`)\n",
     "\n",
     "### Comparing Backtracking vs DQN\n",
     "`TODO:` Fill this out\n",
