--- a/FinalProject_YourGroupNameHere.ipynb
+++ b/FinalProject_YourGroupNameHere.ipynb
@@ -117,8 +117,29 @@
     "# Results `TODO`: Regenerate box_plot.png, compare DQN and AB, table comparing all 4 backtracking algos (mean, median, std), table comparing dqn and ab (mean, median, std)\n",
     "`TODO` Overall results are DQN wins by about 25%. Likely due to limited depth search (see Discussion for explanation). Then for backtracking obv full heuristics wins.\n",
     "\n",
-    "You may have done tons of work on this. Not all of it belongs here. \n",
+    "## Comparing all 4 backtracking algos\n",
     "\n",
+    "![Graph Title](grpah\\box_plot1.png)\n",
+    "\n",
+    "\n",
+    "| Experiment                     | Mean  | Median | Standard Deviation |\n",
+    "|--------------------------------|------:|-------:|-------------------:|\n",
+    "| Score                          |  0.99 |    0.0 |            1.648354 |\n",
+    "| Score + Height                 | 56.43 |   65.5 |           23.449604 |\n",
+    "| Full Heuristics                | 77.12 |   76.0 |            7.317172 |\n",
+    "| Full Heuristics + AB Pruning    | 76.68 |   76.5 |            7.428963 |\n",
+    "\n",
+    "## Comparing dqn and ab \n",
+    "\n",
+    "![Graph Title](grpah\\box_plot2.png)\n",
+    "\n",
+    "| Experiment   | Mean   | Median | Standard Deviation |\n",
+    "|-------------|--------|--------|--------------------|\n",
+    "| DQN         | 108.57 | 110.0  | 15.411694         |\n",
+    "| AB Pruning  | 76.68  | 76.5   | 7.428963          |\n",
+    "\n",
+    "\n",
+    "You may have done tons of work on this. Not all of it belongs here. \n",
     "Reports should have a __narrative__. Once you've looked through all your results over the quarter, decide on one main point and 2-4 secondary points you want us to understand. Include the detailed code and analysis results of those points only; you should spend more time/code/plots on your main point than the others.\n",
     "\n",
     "If you went down any blind alleys that you later decided to not pursue, please don't abuse the TAs time by throwing in 81 lines of code and 4 plots related to something you actually abandoned.  Consider deleting things that are not important to your narrative.  If its slightly relevant to the narrative or you just want us to know you tried something, you could keep it in by summarizing the result in this report in a sentence or two, moving the actual analysis to another file in your repo, and providing us a link to that file.\n",
@@ -170,11 +191,7 @@
     "One of our major limitations was computing power. Due to limited resources we could not explore a depth lower than 3 since it would take an extremely long time so we couldn't use alpha beta pruning to its full extent. Also, with an increased depth we likely would have had a higher average score for our backtracking section. Another major limitation would be that we used a simplified version of tetris that doesn't have time scaling, the full block set, or as advanced piece movement (sliding pieces under each other etc). We used this simplified version to make it easier to integrate our algorithms into the tetris game.\n",
     "\n",
     "### Future work\n",
-    "`TODO`\n",
-    "\n",
-    "Looking at the limitations and/or the toughest parts of the problem and/or the situations where the algorithm(s) did the worst... is there something you'd like to try to make these better.\n",
-    "\n",
-    "Since the main limitation of our backtracking algorithm was a limited depth, in the future we could look into a beam search implementation. This could help us reduce the number of low reward branches to lighten the computational load. Additionally, with more time we could have run the algorithm with a much higher depth would in turn would have led to a higher average score. \n",
+    "In the future, we want to improve our backtracking model by increasing the search depth, possibly using beam search to reduce computation while keeping better placements. We also think combining DQN with heuristics could create a stronger AI by learning better weights for board evaluations. Another idea is improving DQN’s state representation, maybe using CNNs to analyze board patterns instead of just hand-picked features. Trying other reinforcement learning methods like PPO or MCTS could also help. Lastly, we’d like to test our AI on a full Tetris version with more mechanics like T-spins and hold pieces to see if our strategies still hold up.\n",
     "\n",
     "### Ethics & Privacy\n",
     "\n",
