add stats to backtracking results writeup section

--- a/FinalProject_YourGroupNameHere.ipynb
+++ b/FinalProject_YourGroupNameHere.ipynb
@@ -145,15 +145,13 @@
     "If you went down any blind alleys that you later decided to not pursue, please don't abuse the TAs time by throwing in 81 lines of code and 4 plots related to something you actually abandoned.  Consider deleting things that are not important to your narrative.  If its slightly relevant to the narrative or you just want us to know you tried something, you could keep it in by summarizing the result in this report in a sentence or two, moving the actual analysis to another file in your repo, and providing us a link to that file.\n",
     "\n",
     "### Comparing Various Backtracking Algorithms and Heuristics\n",
-    "To analyze different heuristics for our backtracking model, we implemented and compared four different models. The Score model utilizes the game score as a heuristic; the Score+Height model utilizes both game score and height; the noAB model utilizes game score, height, bumpiness, and number of holes. The AB model utilizes the same heuristics as noAB with the additional use of Alpha Beta pruning. \n",
+    "To analyze different heuristics for our backtracking model, we implemented and compared four different models. The Score model utilizes the game score as a heuristic; the Score+Height model utilizes both game score and height; the Full Heuristics model utilizes game score, height, bumpiness, and number of holes. The Full Heuristics + AB Pruning (also aliased as just AB Pruning) model utilizes the same heuristics as the Full Heuristics model with the additional use of Alpha Beta pruning. \n",
     "\n",
-    "Producing the worst results, to no surprise, is the Score model (median = `??`) since it uses the least heuristics compared to the other models. The next model with the lowest median (`???`) is the Score+Height model. Although this model has a difference of `???` in max score compared to the Score model, it is far outperformed by both AB and noAB. \n",
+    "Producing the worst results, to no surprise, is the Score model (median = 0) since it uses the least heuristics compared to the other models. The next model with the lowest median (65.5) is the Score+Height model. Although this model has a large difference in median score compared to the Score model, it is far outperformed by both Full Heuristics and AB Pruning. \n",
     "\n",
-    "The results of AB and noAB both have similar means and medians (`???`), with the median for AB being slightly higher. However, in contrast to noAB, the AB model has a smaller standard deviation. \n",
+    "The results of Full Heuristics and Full Heuristics + AB Pruning both have similar means and medians with both metrics differing in less than one score point. The standard deviation of both also differ by ~0.1. \n",
     "\n",
-    "In analyzing the ranges of scores for each, the Score model leads to the smallest range where few scores are far from zero. The Score+Height model had a wide range with scores varying from `???` to `???`, while AB and noAB consistently perform well with ranges around `???` apart.\n",
-    "\n",
-    "`TODO:` Fill in statistics numbers in this section (marked by `???`)\n",
+    "In analyzing the ranges of scores for each, the Score model leads to the smallest standard deviation, since few scores are far from zero. The Score+Height model lead with the largest standard deviation (23.45), while Full Heuristics and AB Pruning consistently perform well; their standard deviations are 7.32 and 7.43, respectively.\n",
     "\n",
     "### Comparing Backtracking vs DQN\n",
     "`TODO:` Fill this out\n",
